[package]
name = "turbo-glovebox"
version = "0.1.0"
edition = "2021"
default-run = "turbo-glovebox"

[[bin]]
name = "profile"
path = "src/profile.rs"
test = false
bench = false

[dependencies]

log = "*"
env_logger = "*"
chrono = { version = "*", features = ["serde"] }
tempdir = "0.3"
futures = "*"
bitmask-enum = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "*"
confy = "0"
platform-dirs = "0.3.0"
base64 = "*"
anyhow = "*"

tokio = { version = "1", features = ["full"] }

hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "~0"
tokio-tungstenite = "*"
routerify = "3"
http = "*"

bincode = "1"
serde = {version = "1", features = ["derive", "rc"]}
serde_json = "1.0"
serde_with = "1"
serde_yaml = "0.8"

flate2 = "1"

[dev-dependencies]
tokio-tungstenite = "*"
futures-util = "*"